--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -21,7 +21,7 @@
     <script src="_framework/blazor.webassembly.js"></script>
     <script src="_content/MudBlazor/MudBlazor.min.js"></script>
     <script src="_content/Blazor.AnimateOnScroll/js/AnimateOnScroll.js"></script>
-
+    <script src="_content/BlazorAnimation/blazorAnimationInterop.js"></script>
 </body>
 
 </html>
