--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -22,6 +22,12 @@
     <script src="_content/MudBlazor/MudBlazor.min.js"></script>
     <script src="_content/Blazor.AnimateOnScroll/js/AnimateOnScroll.js"></script>
     <script src="_content/BlazorAnimation/blazorAnimationInterop.js"></script>
+    <script src="scripts/scrollToBottom.js"></script>
+    <script src="scripts/scrollByPixels.js"></script>
+
+
+
+
 </body>
 
 </html>
