auto scroll to confirm button achieved

--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -24,6 +24,8 @@
     <script src="_content/BlazorAnimation/blazorAnimationInterop.js"></script>
     <script src="scripts/scrollToBottom.js"></script>
     <script src="scripts/scrollByPixels.js"></script>
+    <script src="scripts/scrollToElement.js"></script>
+
 
 
 
