--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -25,11 +25,9 @@
     <script src="scripts/scrollToBottom.js"></script>
     <script src="scripts/scrollByPixels.js"></script>
     <script src="scripts/scrollToElement.js"></script>
-
-
-
-
+    <script src="scripts/makePhoneCall.js"></script>
 
 </body>
 
 </html>
+
